--- a/pom.xml
+++ b/pom.xml
@@ -63,18 +63,18 @@
         </dependency>
 
         <!-- 微信授权sdk 获取appId等 -->
-        <dependency>paren
+        <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
             <version>2.7.0</version>
         </dependency>
 
         <!-- 微信支付三方SDK -->
-        <dependency>
-            <groupId>cn.springboot</groupId>
-            <artifactId>best-pay-sdk</artifactId>
-            <version>1.1.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.springboot</groupId>-->
+<!--            <artifactId>best-pay-sdk</artifactId>-->
+<!--            <version>1.1.0</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
