--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: beadwallet.mysql@2016
-    url: jdbc:mysql://106.14.238.126:3306/sell?characterEncoding=utf-8&useSSL=false
+    password: root
+    url: jdbc:mysql://106.14.93.187:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
   mvc:
